# lab-projects

./: .context-snapshot.md  .env.example  .gitignore  .lintstagedrc.js  CLAUDE.md  DEPLOYMENT_DIGITALOCEAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_REVIEW.md  PRD.md  QWEN.md  RAILWAY_DEPLOYMENT.md  README.md  TASK_MANAGEMENT_COMPARISON_REPORT.md  all_routes_snapshot.txt  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  v0-redesign-prompt.md
.docs-automation/: BUILD_PIPELINE.md  README.md  build-pipeline.ts  build.mjs  cms-api.ts  cms-ui-components.tsx  content-generator.ts  content-structuring-guidelines.ts  documentation-schema.prisma  feature-comparator.ts  metadata-enrichment-tools.ts  metadata-validation.ts  package.json  parser.ts  prd-tagging-system.ts  test-build.ts  test-parser.ts  traceability-tools.ts  tsconfig.json
.githooks/: pre-push
.husky/: pre-commit  pre-push
backend/: Dockerfile  eslint.config.js  jest.config.ts  package-lock.json  package.json  res_all.txt  res_notif.txt  start.sh  test-output.txt  test_output.txt  test_output_2.txt  tsconfig.json
baseline-workspace/: refactoring-plan.md
cli/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: PRD.md  (+24 more)
sequential-1770261425547/baseline-workspace/datasync/: .env.example  .gitignore  __main__.py  db.py  pyproject.toml  requirements.txt
sequential-1770261425547/baseline-workspace/datasync/auth/: auth.ts  schema.prisma
sequential-1770261425547/baseline-workspace/datasync/datasync/: __main__.py  config.py  main.py  sync_engine.py
(+646 files in other folders)
